# agent-incident-triage

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  run.sh  test.sh  vercel.json
services/api/: Dockerfile  README.md  entrypoint.sh  pyproject.toml  run.sh
services/api/migrations/: 001_create_triage_incidents.sql  002_create_triage_messages.sql  003_create_triage_assessments.sql  004_create_triage_audit_events.sql  005_create_domain_meta_tables.sql  006_create_verified_ips.sql  007_enrich_incidents_table.sql  008_cleanup_invalid_incidents.sql  009_add_severity_column.sql  010_update_severity_to_esi.sql
services/api/src/api/: config.py  main.py
services/api/src/api/adapters/: openai_llm.py  openai_stt.py  openai_tts.py
services/api/src/api/core/: feature_flags.py  pipeline.py  redaction.py
services/api/src/api/db/: engine.py  models.py  repository.py  schemas.py
services/api/src/api/domains/: __init__.py  base.py  registry.py  schemas.py
services/api/src/api/domains/crypto/: module.py  schemas.py
services/api/src/api/domains/medical/: extract.py  module.py  prompts.py  rules.py  (+1 more)
services/api/src/api/routes/: __init__.py  triage.py
services/api/src/api/schemas/: enums.py  responses.py
services/api/tests/: conftest.py
services/api/tests/core/: test_feature_flags.py  test_pipeline.py  test_redaction.py
services/api/tests/db/: test_repository.py
services/api/tests/domain/: test_medical_rules.py  test_medical_schemas.py
services/api/tests/integration/: __init__.py  test_db_constraints.py
services/api/tests/routes/: test_triage.py
(+25 files in other folders)
