[tool.poetry]
name = "triage-api"
version = "0.1.0"
description = "Agent incident triage API"
authors = []
readme = "README.md"
packages = [{include = "api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic-settings = "^2.6.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
httpx = "^0.28.0"
openai = "^1.60.0"
python-multipart = "^0.0.18"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
testcontainers = "^4.14.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["../.."]
addopts = "-m 'not integration'"
markers = [
    "integration: tests that make real network calls (deselected by default)",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
